# miles-studycase

./: .sops.yaml  README.md  proxmox-nat-setup.sh
.github/workflows/: deploy.yaml  lxc-template.yaml  packer.yaml
ansible/: inventory.yml  main.yml  site.yml
ansible/group_vars/: all.yml
ansible/playbooks/: lxc-configure.yml  lxc-setup.yml  proxmox-jump-user.yml  proxmox-nginx.yml
ansible/playbooks/templates/: env.j2  proxmox-nginx-http.j2  proxmox-nginx-https.j2
hetzner-infra/: api-token  credentials  proxmox-network-template.j2
packer/: lxc-base.pkr.hcl
scripts/: create_lxc_template.py  proxmox_lxc.py
web_app/: app.py  gunicorn.conf.py  miles-challenge.athenalabs.work-https.conf  miles-challenge.athenalabs.work.conf  nginx.conf  pyproject.toml  requirements.txt  webapp.service
web_app/.github/workflows/: deploy.yaml
web_app/src/: app.py
web_app/src/miles_challenge/: app.py  install.py
